# mududb

./: .gitignore  Cargo.toml  readme.cn.md
example/key-value/: Cargo.toml
example/vote/: Cargo.toml  Makefile.toml
example/wallet/: Cargo.toml  Makefile.toml
example/wallet/package/: package.desc.json  type.desc.json
example/ycsb/: Cargo.toml  README.md
mudu_adapter/: Cargo.toml
mudu_adapter/src/: backend.rs  config.rs  mududb.rs  mysql.rs  postgres.rs  syscall.rs
mudu_adapter/tests/: adapter_coverage_test.rs
mudu_cli/: Cargo.toml  README.md
mudu_cli/src/: binding_api.rs  lib.rs  main.rs  management.rs  tui.rs
mudu_cli/src/client/: async_client.rs  client.rs  json_client.rs
mudu_contract/: Cargo.toml
mudu_contract/src/: protocol.rs
mudu_contract/src/database/: mod.rs  sql.rs  sql_params.rs
mudu_contract/src/procedure/: proc.rs
mudu_contract/src/protocol/: mod.rs
mudu_contract/src/tuple/: build_tuple.rs  comparator.rs  read_datum.rs  slot.rs  tuple_binary_desc.rs  tuple_datum.rs  tuple_key.rs  tuple_value.rs  update_tuple.rs  vec_dyn_datum.rs  write_value.rs
mudu_gen/: Cargo.toml
mudu_kernel/: Cargo.toml
mudu_kernel/src/: lib.rs
mudu_kernel/src/collection/: mod.rs
mudu_kernel/src/command/: create_partition_placement.rs  create_partition_rule.rs  create_table.rs  delete_key_value.rs  drop_table.rs  insert_key_value.rs  load_from_file.rs  mod.rs  save_to_file.rs  update_key_value.rs
mudu_kernel/src/common/: mod.rs
mudu_kernel/src/contract/: data_row.rs  field_info.rs  meta_mgr.rs  mod.rs  partition_rule.rs  partition_rule_binding.rs  schema_column.rs  schema_table.rs  table_desc.rs  table_info.rs  test_schema.rs  timestamp.rs  version_delta.rs  version_tuple.rs
mudu_kernel/src/executor/: index_access_key.rs  index_access_range.rs  mod.rs
mudu_kernel/src/fuzz/: _fuzz_run.rs  _test_target.rs
mudu_kernel/src/index/: mod.rs  ordered_index.rs
mudu_kernel/src/io/: file.rs  mod.rs  socket.rs  user_io.rs  worker_ring.rs  worker_ring_stub.rs
mudu_kernel/src/meta/: _fuzz.rs  meta_mgr.rs  meta_mgr_factory.rs  mod.rs  partition_binding_catalog.rs  partition_placement_catalog.rs  partition_rule_catalog.rs  schema_catalog.rs
mudu_kernel/src/mudu_conn/: mod.rs  mudu_conn_async.rs  mudu_conn_core.rs  mudu_prepared_stmt.rs  mudu_result_set_async.rs
mudu_kernel/src/server/: async_func_runtime.rs  async_func_task.rs  async_func_task_waker.rs  callback_registry.rs  connection_state.rs  connection_worker_task.rs  frame_dispatch.rs  fsm.rs  inflight_op.rs  message_bus_api.rs  message_bus_runtime.rs  message_dispatcher.rs  mod.rs  partition_router.rs  partition_rpc.rs  perf_test.rs  protocol_codec.rs  request_ctx.rs  request_response_worker.rs  routing.rs  server.rs  server_iouring.rs  session_bound_worker_runtime.rs  task.rs  task_registry.rs  transferred_connection.rs  worker.rs  worker_local.rs  worker_loop_stats.rs  worker_mailbox.rs  worker_registry.rs  worker_ring_loop.rs  worker_session_manager.rs  worker_snapshot.rs  worker_storage.rs  worker_task.rs  worker_tx_manager.rs  x_contract.rs  x_lock_mgr.rs
mudu_kernel/src/sql/: binder.rs  binder_test.rs  bound_stmt.rs  build_where_predicate.rs  copy_layout.rs  copy_layout_test.rs  current_tx.rs  describer.rs  mod.rs  plan_ctx.rs  planner.rs  stmt_cmd_run_test.rs  stmt_copy_from.rs  stmt_query_run.rs  stmt_query_run_test.rs  value_codec.rs  value_codec_test.rs
mudu_kernel/src/storage/: mem_table.rs  mod.rs  pst_store_impl.rs  test_pst_store.rs
mudu_kernel/src/tx/: mod.rs  test_x_snap_mgr.rs
mudu_kernel/src/wal/: log_frame.rs  lsn.rs  mod.rs  pl_batch.rs  pl_batch_worker_log.rs  pl_entry.rs  test_xl_batch.rs  typed_worker_log.rs  worker_log.rs  worker_wal_backend.rs  xl_batch.rs  xl_batch_worker_log.rs  xl_data_op.rs  xl_entry.rs
mudu_kernel/src/x_engine/: api.rs  mod.rs  thd_ctx.rs  tx_mgr.rs  x_param.rs
mudu_runtime/: Cargo.toml
mudu_runtime/src/: db_connector.rs  lib.rs
mudu_runtime/src/async_utils/: blocking.rs
mudu_runtime/src/backend/: accept_handle_task.rs  app_mgr.rs  backend.rs  iouring_admin.rs  mod.rs  mudu_app_mgr.rs  mudu_conn_async.rs  mudu_conn_core.rs  mudu_prepared_stmt.rs  mudu_result_set_async.rs  mududb_cfg.rs  session.rs  sql_async_client_test.rs  test_backend.rs  web_serve.rs
mudu_runtime/src/db_libsql/: ls_async_conn.rs  ls_conn.rs  ls_trans.rs
mudu_runtime/src/db_libsql_async/: libsql_async_conn.rs  libsql_async_conn_inner.rs  result_set.rs
mudu_runtime/src/db_postgres/: pg_interactive_conn.rs
mudu_runtime/src/db_turso/: turso_conn_inner.rs
mudu_runtime/src/interface/: kernel.rs
mudu_runtime/src/resolver/: mod.rs  schema_mgr.rs
mudu_runtime/src/service/: app_inst.rs  app_inst_impl.rs  file_name.rs  kernel_function_p2.rs  kernel_function_p2_async.rs  mod.rs  mudu_package.rs  mudu_package_test.rs  procedure_invoke_component.rs  runtime_impl_test.rs  runtime_opt.rs  runtime_simple.rs  runtime_simple_test.rs  service_impl.rs  test_runtime_simple.rs  wasi_context_component.rs  wt_instance_pre.rs  wt_runtime.rs  wt_runtime_component.rs  wt_runtime_component_test.rs
mudu_runtime/wit/: api.wit  async-api.wit
mudu_sys/: Cargo.toml
mudu_sys/src/: env.rs  fd.rs  fs.rs  lib.rs  net.rs  sync.rs  task.rs  uring.rs
mudu_sys/src/api/: env.rs  fs.rs  net.rs  random.rs  sync.rs  task.rs  time.rs
mudu_sys/src/linux/: env.rs  fs.rs  mod.rs  net.rs  random.rs  sync.rs  task.rs  time.rs  uring.rs
mudu_sys/src/portable/: env.rs
mudu_transpiler/: Cargo.toml
mudu_transpiler/src/: main.rs
mudu_utils/: Cargo.toml
mudu_utils/src/: notifier.rs  task.rs  task_trace.rs  test_debug_server.rs
mudu_wasm/: Cargo.toml  readme.md
mudud/: Cargo.toml
mudud/src/: main.rs
sys_interface/: Cargo.toml  standalone_adapter.md
sys_interface/src/: host.rs  inner_component_async.rs  lib.rs
sys_interface/tests/: standalone_api_test.rs
testing/: Cargo.toml  Makefile.toml
testing/mpk/: wallet.mpk
testing/src/: lib.rs
testing/tests/: test_copy_roundtrip.rs  test_interactive.rs  test_restart.rs  test_tpcc_concurrent_procedure.rs  wallet_mpk.rs
(+221 files in other folders)
