[workspace]
resolver = "2"

members = [
    "mudu",
    "mudu_sys",
    "mudu_adapter",
    "mudu_type",
    "mudu_contract",
    "mudu_binding",
    "example/wallet",
    "example/vote",
    "example/game-backend",
    "example/key-value",
    "example/ycsb",
    "mudu_runtime",
    "mudu_gen",
    "sql_parser",
    "tree-sitter-sql",
    "tree-sitter-wit",
    "mudu_macro",
    "mudu_macro_test",
    "mudu_wasm",
    "mudu_utils",
    "mudu_api_sync",
    "sys_interface",
    "mudu_kernel",
    "test_utils",
    "mudud",
    "mudu_package",
    "mudu_transpiler",
    "mudu_cli"]

[workspace.dependencies]
arbitrary = { version = "1.4.2", features = ["derive", "derive_arbitrary"] }
test_utils = { path = "test_utils" }
sys_interface = { path = "sys_interface" }
mudu_adapter = { path = "mudu_adapter" }
mudu = { path = "mudu" }
mudu_sys = { path = "mudu_sys" }
mudu_binding = { path = "mudu_binding" }
md-5 = { version = "0.11.0-rc.0" }
sql_parser = { path = "sql_parser" }
mudu_gen = { path = "mudu_gen" }
tree_sitter_sql = { path = "tree-sitter-sql" }
tree-sitter-wit = { path = "tree-sitter-wit" }
tree-sitter = { version = "0.26.2" }
tree-sitter-language = { version = "0.1.6" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
project-root = { version = "0.2.2" }
mudu_runtime = { path = "mudu_runtime" }
mudu_kernel = { path = "mudu_kernel" }
mudu_cli = { path = "mudu_cli" }
mudu_macro = { path = "mudu_macro" }
mudu_utils = { path = "mudu_utils" }
mudu_type = { path = "mudu_type" }
mudu_contract = { path = "mudu_contract" }
serde = { version = "1.0.228", features = ["default", "derive", "serde_derive"] }
serde_repr = {version = "0.1.20"}
tracing-subscriber = "0.3.20"
console-subscriber = { version = "0.5.0" }
tokio = { version = "1.47.1", features = ["full"] }
rmp-serde = { version = "1.3.0" }
rmpv = { version = "1.3.0" }
rusqlite = { version = "0.38.0" }
postgres = { version = "0.19.10" }
tokio-postgres = { version = "0.7.15" }
mysql = { version = "28.0.0" }
mysql_async = { version = "0.36.1" }
scc = { version = "3.3.1" }
clap = { version = "4.5.50" }
cc = { version = "1.2.49" }
base16ct = { version = "1.0.0" }
askama = {version = "0.15.0" }
toml = { version = "1.1.0", features = ["preserve_order"] }
wit-bindgen = { version = "0.54.0" }
tracing = { version = "0.1.43" }
pgwire = { version = "0.38.2", default-features = false, features = ["server-api-ring", "pg-ext-types"]}
lazy_static = { version = "1.5.0" }
uuid = { version = "1.18.1", features = ["v4", "js"] }
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
hex = { version = "0.4.3" }
byteorder = { version = "1.5.0" }
paste = { version = "1.0.15" }
reqwest = { version = "0.13.2", features = ["json"] }
base64 = { version = "0.22.1" }
anyhow = { version = "1.0.100" }
libc = { version = "0.2.164" }
fallible-iterator = { version = "0.3.0" }
chrono = { version = "0.4.42" }
async-backtrace = { version = "0.2.7" }
uniffi = { version = "0.31.0", features = ["scaffolding-ffi-buffer-fns"] }
zip = { version = "8.4.0" }
