[package]
name = "mudu_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
mudu = { workspace = true }
mudu_type = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
scc = { workspace = true }
byteorder = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
fallible-iterator = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = { workspace = true }
arbitrary = { workspace = true }
test_utils = { workspace = true }
thiserror = { version = "2.0.17" }
uniffi = { workspace = true }
