[package]
name = "mudu_gen"
version = "0.1.0"
edition = "2024"


build = "build.rs"

[dependencies]
mudu = { workspace = true }
sql_parser = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-wit = { workspace = true }
clap = { workspace = true, features = ["derive"] }
askama = {workspace = true}
serde = { workspace = true }
rust-format = "0.3.4"
paste = { workspace = true }
mudu_binding = {workspace = true}
[build-dependencies]
md-5 = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-wit = { workspace = true }
base16ct = { workspace = true }
serde = { workspace = true }
[lib]
path = "src/lib.rs"

[[bin]]
name = "mgen"
path = "tool/main.rs"


