[package]
name = "mudu_runtime"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[package.metadata.wit-bindgen]
out-dir = "src/bindings"

[features]
debug_trace = ["mudu_kernel/debug_trace", "mudu_utils/debug_trace"]

[dependencies]
async-backtrace = {workspace = true}
mudu_type = { workspace = true }
mudu_sys = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
mudu_kernel = { workspace = true }
mudu_cli = { workspace = true }
as-slice = { version = "0.2.1" }
sql_parser = { workspace = true }
mudu = { workspace = true }
mudu_gen = { workspace = true }
wasmtime = { version = "42.0.1", features = ["async"] }
wasmtime-wasi = { version = "42.0.1", features = ["p2"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
actix-web = "4.11.0"
actix-cors = "0.7.1"
tokio = { workspace = true }
mudu_utils = { workspace = true }
tracing = { workspace = true }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27" }
libsql = { version = "0.9.24" }
lazy_static = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
scopeguard = "1.2.0"
base64 = { workspace = true }
pgwire = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
scc = { workspace = true }
