[package]
name = "mudu_sys"
version = "0.1.0"
edition = "2021"

[dependencies]
mudu = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = { workspace = true }
socket2 = "0.5.8"
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rliburing = { git = "https://github.com/scuptio/rliburing.git" }
