[package]
name = "mudu_utils"
version = "0.1.0"
edition = "2024"

[features]
debug_trace = []

[dependencies]
md-5 = { workspace = true }
hyper = "1.5.0"
hyper-util = "0.1.10"
tracing-subscriber = { workspace = true }
bytes = "1.10.1"
http = "1.3.1"
http-body-util = "0.1.3"
lazy_static = { workspace = true }
mudu = { workspace = true }
mudu_sys = { workspace = true }
tokio = { workspace = true }
scc = { workspace = true }
uuid = { workspace = true }
async-backtrace = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
console-subscriber = {workspace = true}
async-trait = { workspace = true }
futures = { workspace = true }
tree-sitter = { workspace = true }
serde_json = { workspace = true }
base16ct = { workspace = true }
