[package]
name = "mod_0"
version = "0.1.0"
edition = "2024"

[features]
default = ["transpile"]
macro = ["sys_interface/component-model"]
transpile = ["sys_interface/component-model", "sys_interface/async"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mudu = { workspace = true }
mudu_type = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
wit-bindgen = { workspace = true }
mudu_macro = { workspace = true }
sys_interface = { workspace = true }
lazy_static = { workspace = true }
