[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
mudu_runtime = { workspace = true }
mudu_utils = { workspace = true }
mudu_cli = { workspace = true }
mudu_binding = { workspace = true }
mudu_contract = { workspace = true }
mudu = { workspace = true }
mudu_sys = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
libsql = { version = "0.9.24" }
tracing = { workspace = true }
