[package]
name = "key-value"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mudu = { workspace = true }
mudu_type = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
wit-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sys_interface = { workspace = true, features = ["async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sys_interface = { workspace = true, features = ["async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mudu_adapter = { workspace = true }
sys_interface = { workspace = true, features = ["async", "standalone-adapter"] }
