[package]
name = "vote"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
mudu = { workspace = true }
mudu_sys = { workspace = true }
mudu_type = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true}
wit-bindgen = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
sys_interface = { workspace = true, features = ["async"] }
chrono = { workspace = true }
fallible-iterator = { workspace = true }
