[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]


[dependencies]
mudu = { workspace = true }
mudu_sys = { workspace = true }
mudu_type = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
wit-bindgen = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sys_interface = { workspace = true, features = ["async"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sys_interface = { workspace = true, features = ["async"] }

[dev-dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
sys_interface = { workspace = true, features = ["async", "standalone-adapter"] }
